--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="assignment-5/index.html">assignment-5</a>
     <a href="assignment-6/index.html">assignment-6</a>
     <a href="challenge/index.html">challenge</a>
-    <a href="problem-1/index.html">challenge</a>
-    <a href="problem-2/index.html">challenge</a>
+    <a href="problem-1/index.html">problem-1</a>
+    <a href="problem-2/index.html">problem-2</a>
 </body>
 </html>
